# Mini_Projects

./: README.md  pyproject.toml
context_managers/: additional_uses.ipynb  contextmanager_decorator.ipynb  nested_context_managers.ipynb
generators/: fibonacci_seq.ipynb  generator_expressions_and_performance.ipynb  yield_from.ipynb
iterables/: consuming_iterators_manually.ipynb  delegatin_iterators.ipynb  iter()_function.ipynb  iterating_collections.ipynb  iterators.ipynb  iterators_iterables.ipynb  sorting_iterables.ipynb
iteration_tools/: aggregators.ipynb  chaining_teeing.ipynb  grouping.ipynb  mapping_reducing.ipynb  slicing.ipynb  zipping.ipynb
part_2/context_managers/: caveat_with_lazy_iterators.ipynb  context_managers.ipynb  generators_and_ctx_manager.ipynb  nested_context_managers.ipynb  not_just_context_manager.ipynb
part_2/generators/: card_deck.ipynb  iterable_from_gen.ipynb  yielding_and_generator_func.ipynb
part_2/iterables/: built-in_iterables_iterators.ipynb  caveat_iterators_as_arguments.ipynb  cyclic_iterators.ipynb  iterating_callables.ipynb  lazy_iterables.ipynb  reversed_iteration.ipynb
part_2/iteration_tools/: aggregators.ipynb  combinatorics.ipynb  (+2 more)
part_3/: project_1.ipynb
projects/: Project 1.ipynb  project_1_sequences.py  project_2_iterators.py  project_3_generators.py
sequences/: Slicing.ipynb  assignment_in_sequences.ipynb  in_place_concatenation.ipynb  list_comprehension.ipynb  mutable_sequence_types.ipynb  sequence_types.ipynb  sorting_sequences.ipynb
tests/: conftest.py  test_project_1.py  test_project_2.py
(+100 files in other folders)
